# pywebifc

./: .gitignore
src/cpp/pybind11/: CMakeLists.txt  export_glb.py  test_pywebifc.py  web-ifc-pybind11.cpp
src/cpp/pybind11/stubs/: pywebifc.pyi
